# ai-workflow-foundation

./: .gitignore
.cursor/rules/: post-change-restart.mdc
.ijfw/wiki-state/: index.json
.wayland/: CONTEXT.md
ai-workflow-foundation/: .gitignore  Launch-AIWF.ps1  README.md  Restart-AIWF.ps1  Setup-AIBridge.ps1  Sync-DesktopApp.ps1  aiwf_cli.py  pyproject.toml
ai-workflow-foundation/.repo_reports/: aiwf-ai-analysis-input.json
ai-workflow-foundation/desktop/: README.md  package-lock.json  package.json
ai-workflow-foundation/desktop/src-tauri/: Cargo.toml  tauri.conf.json
ai-workflow-foundation/desktop/src-tauri/capabilities/: default.json
ai-workflow-foundation/desktop/src-tauri/icons/: icon.icns
ai-workflow-foundation/desktop/src-tauri/scripts/: sync-app.ps1
ai-workflow-foundation/desktop/src-tauri/src/: backend.rs  lib.rs  main.rs
ai-workflow-foundation/docs/: api.md  architecture.md  delivery.md
ai-workflow-foundation/tests/: test_agents.py  test_assist_workspace.py  test_cli_acp.py  test_doctor.py  test_execution_result.py  test_executor.py  test_packages.py  test_runner.py  test_server.py  test_session.py  test_skills.py  test_unity_aibridge.py  test_unity_workflow.py  test_validation.py  test_workflow_assist.py  test_workflow_graph.py  test_workflows.py
ai-workflow-foundation/web/: index.html
docs/: ai-workflow-foundation-requirements.md  cursor-cli-api-auth-wayland.md  mvp-boundary-v0.2.md  wayland-cursor-agent-fix.md  workflow-agent-acp-plan.md  workflow-assist-mvp.md  workflow-execution-core-plan.md
scripts/: set-cursor-api-key.ps1
(+101 files in other folders)
