[package]
name = "aiwf-desktop"
version = "0.1.0"
description = "AI Workflow Foundation desktop shell"
authors = ["AIWF"]
edition = "2021"

[lib]
name = "aiwf_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }
